[gd_scene load_steps=4 format=3 uid="uid://di2qlrgorb577"]

[ext_resource type="Script" uid="uid://h8a8rmphjlsd" path="res://scripts/ui/UnitIcon.gd" id="1_670gx"]
[ext_resource type="Theme" uid="uid://bh3pao1yls74n" path="res://resources/themes/main_theme.tres" id="2_theme"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_unit"]
bg_color = Color(0.039, 0.059, 0.118, 0.85)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0.898, 1, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="UnitIcon" type="PanelContainer"]
custom_minimum_size = Vector2(120, 160)
theme = ExtResource("2_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_unit")
script = ExtResource("1_670gx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 3

[node name="HeaderSection" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HeaderSection"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0.898, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Unit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IconSprite" type="TextureRect" parent="VBoxContainer/HeaderSection"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="HealthSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/HealthSection"]
layout_mode = 2
text = "HP: 100/100"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/HealthSection"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="StatsSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="SpeedLabel" type="Label" parent="VBoxContainer/StatsSection"]
layout_mode = 2
text = "Speed: 150"

[node name="DamageLabel" type="Label" parent="VBoxContainer/StatsSection"]
layout_mode = 2
text = "Damage: -"

[node name="CargoSection" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 2

[node name="CargoLabel" type="Label" parent="VBoxContainer/CargoSection"]
layout_mode = 2
text = "Cargo: 0/100"
horizontal_alignment = 1

[node name="CargoTotalBar" type="ProgressBar" parent="VBoxContainer/CargoSection"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="CargoBreakdown" type="VBoxContainer" parent="VBoxContainer/CargoSection"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="CommonBar" type="ProgressBar" parent="VBoxContainer/CargoSection/CargoBreakdown"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="RareBar" type="ProgressBar" parent="VBoxContainer/CargoSection/CargoBreakdown"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="ExoticBar" type="ProgressBar" parent="VBoxContainer/CargoSection/CargoBreakdown"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
max_value = 100.0
show_percentage = false
